--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Youtube NSFW",
+    "name": "Youtube Auto Pause",
     "version": "1.0",
     "description": "Stops Youtube on tab unfocus and continues on focus",
     "permissions": ["tabs", "https://www.youtube.com/*"],
