--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,25 @@
     "name": "Youtube Auto Pause",
     "version": "1.3.3",
     "description": "Stops Youtube on tab unfocus and continues on focus",
-    "permissions": ["tabs", "storage", "https://www.youtube.com/*"],
+    "permissions": [
+        "tabs",
+        "storage",
+        "https://www.youtube.com/*",
+        "https://vimeo.com/*",
+        "https://www.netflix.com/watch/*"
+    ],
     "homepage_url": "https://github.com/drodil/youtube_auto_pause",
     "options_ui": {
         "page": "options.html",
         "open_in_tab": false
     },
     "content_scripts": [{
-        "matches": ["https://www.youtube.com/*"],
-        "js": ["visibility.js"]
+        "matches": [
+            "https://www.youtube.com/*",
+            "https://vimeo.com/*",
+            "https://www.netflix.com/watch/*"
+        ],
+        "js": ["content.js"]
     }],
     "icons": {
         "16": "images/icon_16.png",
