--- a/manifest.json
+++ b/manifest.json
@@ -63,8 +63,8 @@
 	"commands": {
 		"toggle-extension": {
 			"suggested_key": {
-				"default": "Ctrl+Shift+P",
-				"mac": "Command+Shift+P"
+				"default": "Ctrl+Shift+T",
+				"mac": "Command+Shift+T"
 			},
 			"description": "Toggle auto pause/resume"
 		},
@@ -77,8 +77,8 @@
 		},
 		"toggle_mute": {
 			"suggested_key": {
-				"default": "Ctrl+Shift+O",
-				"mac": "Command+Shift+O"
+				"default": "Ctrl+Shift+M",
+				"mac": "Command+Shift+M"
 			},
 			"description": "Toggle mute"
 		}
