fix: yet another tuning for hotkeys

--- a/manifest.json
+++ b/manifest.json
@@ -77,8 +77,8 @@
 		},
 		"toggle_mute": {
 			"suggested_key": {
-				"default": "Ctrl+Shift+L",
-				"mac": "Command+Shift+L"
+				"default": "Ctrl+Shift+O",
+				"mac": "Command+Shift+O"
 			},
 			"description": "Toggle mute"
 		}
