--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Youtube Auto Pause",
-  "version": "1.6.5",
-  "description": "Stops Youtube (+ other video services) on tab unfocus and continues on focus",
+  "name": "YouTube Auto Pause",
+  "version": "1.6.6",
+  "description": "Stops YouTube (+ other video services) on tab unfocus and continues on focus",
   "permissions": ["tabs", "storage", "activeTab", "scripting", "idle"],
   "host_permissions": [
     "https://*.youtube.com/*",
