--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -17,7 +17,7 @@ jobs:
         id: previoustag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
       - run: npm ci
-      - run: npm lint
+      - run: npm run lint
       - run: npm run build
       - name: Create Github Release
         uses: actions/create-release@v1
