--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -19,6 +19,11 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm run build
+      - uses: yashanand1910/standard-release-notes@v1.2.1
+        id: get_release_notes
+        with:
+          changelog_path: ./CHANGELOG.md
+          version: ${{ steps.previoustag.outputs.tag }}
       - name: Create Github Release
         uses: actions/create-release@v1
         id: create_release
@@ -27,6 +32,7 @@ jobs:
           prerelease: false
           release_name: ${{ steps.previoustag.outputs.tag }}
           tag_name: ${{ steps.previoustag.outputs.tag }}
+          body: ${{ steps.get_release_notes.outputs.release_notes }}
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       - name: Upload Chrome Extension
