--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "start:firefox": "web-ext run --source-dir ./firefox/",
     "debug:firefox": "web-ext run --devtools --source-dir ./firefox/",
     "build:firefox": "web-ext build --overwrite-dest --source-dir ./firefox/ --filename firefox.zip",
-    "bump-test": "yarn run standard-version --dry-run --no-verify",
-    "bump": "npm run standard-version --no-verify"
+    "bump-test": "standard-version --dry-run --no-verify",
+    "bump": "standard-version --no-verify"
   },
   "devDependencies": {
     "standard-version": "^9.5.0",
