--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -2,13 +2,7 @@
   "name": "YouTube Auto Pause",
   "version": "1.8.0",
   "description": "Stops YouTube (+ other video services) on tab unfocus and continues on focus",
-  "permissions": [
-    "tabs",
-    "storage",
-    "activeTab",
-    "scripting",
-    "idle"
-  ],
+  "permissions": ["tabs", "storage", "activeTab", "scripting", "idle"],
   "host_permissions": [
     "https://*.youtube.com/*",
     "https://*.vimeo.com/*",
@@ -44,9 +38,7 @@
     "service_worker": "yt.js"
   },
   "externally_connectable": {
-    "ids": [
-      "*"
-    ],
+    "ids": ["*"],
     "matches": [
       "https://*.youtube.com/*",
       "https://*.youtubekids.com/*",
