--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
   ],
   "scripts": {
     "build": "npm run build:chrome && npm run build:firefox",
-    "lint": "web-ext lint --source-dir ./firefox/",
-    "start:chrome": "web-ext run --source-dir ./chrome/ --target chromium",
-    "debug:chrome": "web-ext run --devtools --source-dir ./chrome/ --target chromium",
-    "build:chrome": "web-ext build --overwrite-dest --source-dir ./chrome/ --filename chrome.zip",
-    "start:firefox": "web-ext run --source-dir ./firefox/",
-    "debug:firefox": "web-ext run --devtools --source-dir ./firefox/",
-    "build:firefox": "web-ext build --overwrite-dest --source-dir ./firefox/ --filename firefox.zip",
+    "lint": "web-ext lint --source-dir ./src/",
+    "prepare:chrome": "cp manifests/chrome.json src/manifest.json",
+    "prepare:firefox": "cp manifests/firefox.json src/manifest.json",
+    "start:chrome": "npm run prepare:chrome && web-ext run --source-dir src/ --target chromium",
+    "debug:chrome": "npm run prepare:chrome && web-ext run --devtools --source-dir src/ --target chromium",
+    "build:chrome": "npm run prepare:chrome && web-ext build --overwrite-dest --source-dir src/ --filename chrome.zip",
+    "start:firefox": "npm run prepare:firefox && web-ext run --source-dir ./src/",
+    "debug:firefox": "npm run prepare:firefox && web-ext run --devtools --source-dir ./src/",
+    "build:firefox": "npm run prepare:firefox && web-ext build --overwrite-dest --source-dir ./src/ --filename firefox.zip",
     "bump-test": "standard-version --dry-run --no-verify",
     "bump": "standard-version --no-verify"
   },
